--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-converter.py
+converter.txt
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
+# End of https://mrkandreev.name/snippets/gitignore-generator/#VisualStudioCode
